# CppQtQuickWebsite

./: CHANGELOG.md  README.md
client/: CMakeLists.txt  bundle.qrc
client-side/: CMakeLists.txt
client-side/resources/: resources.qrc
client-side/resources/text/: long_text.txt  lorem_ipsum.html
client-side/resources/translation/: local_strings_de_DE.json  local_strings_en_US.json  local_strings_pl_PL.json
client-side/src/cpp/: Backend.cpp  Backend.h  Base64Converter.cpp  Base64Converter.h  BinaryStorage.cpp  BinaryStorage.h  BrowserJS.cpp  BrowserJS.h  Counter.cpp  Counter.h  FakeProcessor.cpp  FakeProcessor.h  ImageDownloader.cpp  ImageDownloader.h  ListModel.cpp  ListModel.h  Localization.cpp  Localization.h  SystemInformation.cpp  SystemInformation.h  TextFileIO.cpp  TextFileIO.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
client-side/src/js/: JSCounterBtnCodeBehindImpl.js  JSCounterBtnCodeSharedImpl.js  js.qrc
client-side/src/qml/: ExampleWindow.qml  JSCounterBtnCodeBehind.qml  JSCounterBtnCodeShared.qml  MainPage.qml  MessageDialog.qml  PopUpMessage.qml  StyleDialog.qml  SubPage1.qml  SubPage10.qml  SubPage11.qml  SubPage12.qml  SubPage13.qml  SubPage14.qml  SubPage15.qml  SubPage16.qml  SubPage17.qml  SubPage18.qml  SubPage19.qml  SubPage2.qml  SubPage20.qml  SubPage21.qml  SubPage22.qml  SubPage23.qml  SubPage24.qml  SubPage25.qml  SubPage3.qml  SubPage4.qml  SubPage5.qml  SubPage6.qml  SubPage7.qml  SubPage8.qml  SubPage9.qml  ToMainPageButton.qml  ZoomControl.qml  main.qml  qml.qrc
client-side/src/qml/singletons/: SubPagesDescriptions.qml  ZoomSettings.qml  qmldir
client/resources/: resources.qrc
client/src/: Backend.cpp  Backend.h  Counter.h  ListModel.cpp  WebSocketClient.cpp  WebSocketClient.h  WebSocketServer.cpp  WebSocketServer.h  main.cpp
client/src/cpp/: Backend.cpp  ListModel.h  TextFileIO.cpp  TextFileIO.h  WebSocketClient.cpp  WebSocketClient.h
client/src/qml/: PopUpMessage.qml  SubPage1.qml  SubPage10.qml  SubPage12.qml  SubPage13.qml  SubPage16.qml  SubPage17.qml  SubPage18.qml  SubPage19.qml  SubPage20.qml  SubPage5.qml  SubPage6.qml  SubPage8.qml  SubPage9.qml  main.qml
client/src/ui/: MainPage.qml  SubPage1.qml  SubPage10.qml  SubPage11.qml  SubPage12.qml  SubPage13.qml  SubPage14.qml  SubPage15.qml  SubPage16.qml  SubPage17.qml  SubPage18.qml  SubPage19.qml  SubPage2.qml  SubPage20.qml  SubPage3.qml  SubPage4.qml  SubPage5.qml  SubPage6.qml  SubPage7.qml  SubPage8.qml  SubPage9.qml  ToMainPageButton.qml  main.qml
server/src/cpp/: main.cpp
